Start Tilemap Editor -- Create Tileset Display
* Added flag to textures to determine if tileset.
* Created new TilesetDisplay
* Added new utility template functions to get keys from a map.
* Added GetTilesetNames() to get the AssetManager to easily get the names of all tilesets that have been loaded.
* Adjusted the Batcher and destructors for all derived classes to be virtual.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -9,7 +9,10 @@ add_executable(SCION_EDITOR
     "src/editor/displays/SceneDisplay.h"
     "src/editor/displays/SceneDisplay.cpp"  
     
-    "src/editor/utilities/editor_textures.h")
+    "src/editor/utilities/editor_textures.h" 
+    "src/editor/displays/TilesetDisplay.h"
+    "src/editor/displays/TilesetDisplay.cpp"
+)
 
 target_include_directories(
     SCION_EDITOR PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
