Added SceneObjects and SceneManager
* Created the new SceneObject and SceneManager classes.
* Added ClearRegistry() and RemoveContext() to the Registry class.
* Added the ability to delete specific assets from the asset manager.
* Adjusted the SceneDisplay to use the new SceneManager.
* Added the ability to drag scene assets into the tilemap editor.
* Adjusted the render systems to use registries passed into the update function.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -24,7 +24,12 @@ add_executable(SCION_EDITOR
     # Editor Systems
     "src/editor/systems/GridSystem.h" 
     "src/editor/systems/GridSystem.cpp" 
-)
+    
+    # Scenes
+    "src/editor/scene/SceneObject.h" 
+    "src/editor/scene/SceneObject.cpp" 
+    "src/editor/scene/SceneManager.h" 
+    "src/editor/scene/SceneManager.cpp")
 
 target_include_directories(
     SCION_EDITOR PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
