Created TileTool Abstract Class
* Created the TileTool Abstract class to be used as the base class for the actual create tile tools.
* Created the Tile struct, so we can easily define what a tile is before we place them.
* Created the TileComponent. We want to be able to filter game objects and tiles.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -33,7 +33,10 @@ add_executable(SCION_EDITOR
     
     # Tools
     "src/editor/tools/AbstractTool.h"
-    "src/editor/tools/AbstractTool.cpp")
+    "src/editor/tools/AbstractTool.cpp"
+    "src/editor/tools/TileTool.h"
+    "src/editor/tools/TileTool.cpp"
+)
 
 target_include_directories(
     SCION_EDITOR PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
