cmake compiler settings & logger improvement

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -44,3 +44,6 @@ add_dependencies(SCION_EDITOR Copy-Assets)
 
 set_target_properties(SCION_EDITOR PROPERTIES
     VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/")
+
+target_compile_options(
+    SCION_EDITOR PRIVATE $<$<COMPILE_LANGUAGE:CXX>:${CXX_COMPILE_FLAGS}>)
