--- a/SCION_LOGGER/CMakeLists.txt
+++ b/SCION_LOGGER/CMakeLists.txt
@@ -7,3 +7,6 @@ target_include_directories(
     SCION_LOGGER PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 target_link_libraries( SCION_LOGGER PUBLIC fmt::fmt)
+
+target_compile_options( 
+    SCION_LOGGER PRIVATE $<$<COMPILE_LANGUAGE:CXX>:${CXX_COMPILE_FLAGS}>)
