--- a/SCION_UTILITIES/CMakeLists.txt
+++ b/SCION_UTILITIES/CMakeLists.txt
@@ -10,4 +10,8 @@ add_library(SCION_UTILITIES
 
 target_include_directories(
     SCION_UTILITIES PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
 target_link_libraries(SCION_UTILITIES PUBLIC SCION_LOGGER SDL2::SDL2)
+
+target_compile_options(
+    SCION_UTILITIES PRIVATE $<$<COMPILE_LANGUAGE:CXX>:${CXX_COMPILE_FLAGS}>)
