OpenGL debug callback & Laptops hybrid gpu bugfixes
New class:
	SCION_RENDERING:OpenGLDebugger
		Allows realtime Harware OpenGL debugging.

Options added:
	Enable OpenGL realtime/synchronous debug callback
		Set SCION_OPENGL_DEBUG_CALLBACK macro from CMakeLists.txt or #define
	Enable OpenGL realtime/synchronous break on error/warning
		Set SCION_OPENGL_DEBUG_BREAKONERROR/SCION_OPENGL_DEBUG_BREAKONWARNING macro from CMakeLists.txt or #define
	Force OpenGL discrete gpu on optimus laptops
		Set SCION_OPENGL_FORCE_DISCRETE_GPU macro from CMakeLists.txt or #define
Modifications:
	SCION_LOGGER: added method to log error without 'std::source_location' in case of '__debugbreak() [linux/windows]' called.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,15 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
 
+set( SCION_OPENGL_DEBUG_CALLBACK					ON	)
+set( SCION_OPENGL_DEBUG_CALLBACK_FWD_COMPATIBILITY	OFF	)
+set( SCION_OPENGL_DEBUG_BREAKONERROR				OFF	)
+set( SCION_OPENGL_DEBUG_BREAKONWARNING				OFF	)
+
+set( SCION_OPENGL_FORCE_DISCRETE_GPU				ON	)
+
 include(cmake/CompilerSettings.cmake)
+include(cmake/Options.cmake)
 
 set(BUILD_SHARED_LIBS OFF)
 
