OpengGL Debug Callback improvement
* Changes:
    - The OpengGL Debugger class is now static to allow smooth and safe insertion in any part of the code at runtime.

    - Removed preprocessor macros SCION_OPENGL_DEBUG_BREAKONERROR & SCION_OPENGL_DEBUG_BREAKONWARNING from from CMakeLists.txt
    and replaced by OpenGLDebugger::breakOnError(bool) & OpenGLDebugger::breakOnWarning(bool) to save compile time when option changed
    (the whole SCION libs are statics).

    - Added methods OpenGLDebugger::push(id) & OpenGLDebugger::pop(id) to enable or disable warnings on the fly in any part of the code.

    - Added method OpenGLDebugger::setSeverityLevel(OpenGLDebuggerSeverity::Disable/Notification/Low/Medium/High).

    - Added possibility to send a list of Ids to ignore at runtime through the OpenGLDebugger::init(std::vector<unsigned>) method.

* Other:
    - Self documented code
    - Updated README.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,12 +19,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
 
+# OpenGL realtime debugger settings
 set( SCION_OPENGL_DEBUG_CALLBACK					ON	)
-set( SCION_OPENGL_DEBUG_CALLBACK_FWD_COMPATIBILITY	OFF	)
-set( SCION_OPENGL_DEBUG_BREAKONERROR				OFF	)
-set( SCION_OPENGL_DEBUG_BREAKONWARNING				OFF	)
+set( SCION_OPENGL_DEBUG_FORWARD_COMPATIBILITY		ON	)
 
-set( SCION_OPENGL_FORCE_DISCRETE_GPU				ON	)
+# Force discrete GPU on laptops fitted with Optimus / dual GPUs technology
+set( SCION_OPENGL_FORCE_DISCRETE_GPU	OFF	)
 
 include(cmake/CompilerSettings.cmake)
 include(cmake/Options.cmake)
