--- a/SCION_CORE/CMakeLists.txt
+++ b/SCION_CORE/CMakeLists.txt
@@ -91,7 +91,8 @@ target_link_libraries(SCION_CORE PUBLIC
     glm::glm EnTT::EnTT sol2
     $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
         $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
-    SCION_LOGGER SCION_UTILITIES SCION_PHYSICS SCION_RENDERING SCION_SOUNDS SCION_WINDOW)
+    SCION_LOGGER SCION_UTILITIES SCION_PHYSICS
+	SCION_RENDERING SCION_FILESYSTEM SCION_SOUNDS SCION_WINDOW)
 
 target_compile_options(
     SCION_CORE PRIVATE $<$<COMPILE_LANGUAGE:CXX>:${CXX_COMPILE_FLAGS}>)
