Started adding some ImGui Utility functions
* Some simple functions that will handle some ImGui calls that are frequently called together.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -6,6 +6,9 @@ add_executable(SCION_EDITOR
     # Editor Utilities
     "src/editor/utilities/editor_textures.h" 
     "src/editor/utilities/EditorUtilities.h"
+	"src/editor/utilities/ImGuiUtils.h"
+	"src/editor/utilities/ImGuiUtils.cpp"
+	"src/editor/utilities/EditorFramebuffers.h"
 
     # Editor Displays
     "src/editor/displays/IDisplay.h"
@@ -17,9 +20,10 @@ add_executable(SCION_EDITOR
     "src/editor/displays/TilesetDisplay.cpp"
     "src/editor/displays/TilemapDisplay.h" 
     "src/editor/displays/TilemapDisplay.cpp" 
-    "src/editor/utilities/EditorFramebuffers.h"
     "src/editor/displays/AssetDisplay.h" 
     "src/editor/displays/AssetDisplay.cpp" 
+	"src/editor/displays/MenuDisplay.h"
+	"src/editor/displays/MenuDisplay.cpp"
 
     # Editor Systems
     "src/editor/systems/GridSystem.h" 
@@ -43,7 +47,7 @@ add_executable(SCION_EDITOR
 	"src/editor/tools/ToolManager.cpp"
 	"src/editor/tools/RectFillTool.h"
 	"src/editor/tools/RectFillTool.cpp"
- "src/editor/displays/MenuDisplay.h" "src/editor/displays/MenuDisplay.cpp")
+)
 
 target_include_directories(
     SCION_EDITOR PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
