--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -47,7 +47,7 @@ add_executable(SCION_EDITOR
 	"src/editor/tools/ToolManager.cpp"
 	"src/editor/tools/RectFillTool.h"
 	"src/editor/tools/RectFillTool.cpp"
-)
+ "src/editor/utilities/DrawComponentUtils.h" "src/editor/utilities/DrawComponentUtils.cpp")
 
 target_include_directories(
     SCION_EDITOR PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
