Added SceneHierarchy and Object Details Displays
* The SceneHierarchy display will display all of the game objects in the scene.
* Added a temporary create_entity function to add a new game object. To be moved to the SceneObject class.
* Added new meta function for adding default components in the entity class.
* Registered all components to be used in the DrawEntitycomponentInfo calls.
* Added ability to add components to selected game objects.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -28,6 +28,8 @@ add_executable(SCION_EDITOR
 	"src/editor/displays/MenuDisplay.cpp"
 	"src/editor/displays/TileDetailsDisplay.h"
 	"src/editor/displays/TileDetailsDisplay.cpp"
+	"src/editor/displays/SceneHierarchyDisplay.h"
+	"src/editor/displays/SceneHierarchyDisplay.cpp"
 
     # Editor Systems
     "src/editor/systems/GridSystem.h" 
@@ -51,7 +53,7 @@ add_executable(SCION_EDITOR
 	"src/editor/tools/ToolManager.cpp"
 	"src/editor/tools/RectFillTool.h"
 	"src/editor/tools/RectFillTool.cpp"
-)
+ )
 
 target_include_directories(
     SCION_EDITOR PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
