--- a/SCION_CORE/CMakeLists.txt
+++ b/SCION_CORE/CMakeLists.txt
@@ -84,10 +84,12 @@ add_library(SCION_CORE
     "include/Core/Systems/ScriptingSystem.h"
     "src/Systems/ScriptingSystem.cpp"
 
+	# Loaders and Serializers
 	"include/Core/ECS/Components/ComponentSerializer.h"
 	"include/Core/ECS/Components/ComponentSerializer.inl"
 	"src/ECS/Components/ComponentSerializer.cpp"
- "include/Core/Loaders/TilemapLoader.h" "src/Loaders/TilemapLoader.cpp")
+	"include/Core/Loaders/TilemapLoader.h"
+	"src/Loaders/TilemapLoader.cpp")
 
 target_include_directories(
     SCION_CORE PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
