Added Editor Updates and Improvements
* Filled out Physics Component Draw functionality.
* Adjusted lua function naming conventions to have S2D prefix.
* Created Physics Utilities with helper functions to adjusts filter categories etc.
* Enable Physics components when copying scenes.
* Added some necessary comments.
* Added some more ImGui Utility functions.
* Added EditorStyleToolDisplay. This is for adjusting ImGui styles.
* Made the draw component functions more clean.
* Made the Tile Layers into its own display.
* Separated the random generators into two, int and float generators.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -30,6 +30,8 @@ add_executable(SCION_EDITOR
 	"src/editor/displays/TileDetailsDisplay.cpp"
 	"src/editor/displays/SceneHierarchyDisplay.h"
 	"src/editor/displays/SceneHierarchyDisplay.cpp"
+	"src/editor/displays/EditorStyleToolDisplay.h"
+	"src/editor/displays/EditorStyleToolDisplay.cpp"
 
     # Editor Systems
     "src/editor/systems/GridSystem.h" 
@@ -53,7 +55,7 @@ add_executable(SCION_EDITOR
 	"src/editor/tools/ToolManager.cpp"
 	"src/editor/tools/RectFillTool.h"
 	"src/editor/tools/RectFillTool.cpp"
- )
+)
 
 target_include_directories(
     SCION_EDITOR PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
