--- a/SCION_PHYSICS/CMakeLists.txt
+++ b/SCION_PHYSICS/CMakeLists.txt
@@ -4,13 +4,17 @@ add_library(SCION_PHYSICS
     "include/Physics/ContactListener.h"
     "src/ContactListener.cpp"
     "include/Physics/UserData.h"
-    "src/UserData.cpp")
+    "src/UserData.cpp"
+	"include/Physics/PhysicsUtilities.h"
+	"src/PhysicsUtilities.cpp"
+)
 
 target_include_directories(
     SCION_PHYSICS PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 target_link_libraries(SCION_PHYSICS
     PRIVATE SCION_LOGGER
+	PRIVATE SCION_UTILITIES
     PUBLIC box2d::box2d)
 
 target_compile_options(
