Start Adding Undo/Redo Functionality to the Editor
Started adding in the concepts necessary for undo/redo functionality.

Still need to fill out all of the necessary editor commands.

* Created Abstract Command Manager and Command Manager Classes.
* Created the CreateTileToolAddCmd.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -55,6 +55,13 @@ add_executable(SCION_EDITOR
 	"src/editor/tools/ToolManager.cpp"
 	"src/editor/tools/RectFillTool.h"
 	"src/editor/tools/RectFillTool.cpp"
+
+	# Commands
+	"src/editor/commands/AbstractCommandManager.h"
+	"src/editor/commands/AbstractCommandManager.inl"
+	"src/editor/commands/CommandManager.h"
+	"src/editor/commands/cmds/CreateTileToolCmds.h"
+	"src/editor/commands/cmds/CreateTileToolCmds.cpp"
 )
 
 target_include_directories(
