Started Adding Toolbars and FontAwesome
* Added FontAwesome to ImGui Fonts
* Added Toolbar to Tilemap Display
* Added the ability to change what tool is currently active.
* Added SetupTools Function in the tool manager.
* Added checks for undo/redo stacks empty.
* Added some ImGui Utility wrapper functions.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -64,7 +64,7 @@ add_executable(SCION_EDITOR
 	"src/editor/commands/cmds/CreateTileToolCmds.cpp"
 	"src/editor/commands/cmds/RectToolCmds.h"
 	"src/editor/commands/cmds/RectToolCmds.cpp"
-)
+ "src/editor/utilities/fonts/IconsFontAwesome5.h")
 
 target_include_directories(
     SCION_EDITOR PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
