Started Gizmo Class
* Added the new Gizmo Class as an abstract class to be used to make other gizmos.
* Added GizmoAxisParams. This is used to set up the gizmos.
* Added TryGetComponent to the entity class. This will return a pointer.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(SCION_EDITOR
 	"src/editor/utilities/EditorFramebuffers.h"
 	"src/editor/utilities/DrawComponentUtils.h"
 	"src/editor/utilities/DrawComponentUtils.cpp"
+	"src/editor/utilities/fonts/IconsFontAwesome5.h"
 
     # Editor Displays
     "src/editor/displays/IDisplay.h"
@@ -56,6 +57,10 @@ add_executable(SCION_EDITOR
 	"src/editor/tools/RectFillTool.h"
 	"src/editor/tools/RectFillTool.cpp"
 
+	# Gizmos
+	"src/editor/tools/gizmos/Gizmo.h"
+	"src/editor/tools/gizmos/Gizmo.cpp"
+
 	# Commands
 	"src/editor/commands/AbstractCommandManager.h"
 	"src/editor/commands/AbstractCommandManager.inl"
@@ -64,7 +69,7 @@ add_executable(SCION_EDITOR
 	"src/editor/commands/cmds/CreateTileToolCmds.cpp"
 	"src/editor/commands/cmds/RectToolCmds.h"
 	"src/editor/commands/cmds/RectToolCmds.cpp"
- "src/editor/utilities/fonts/IconsFontAwesome5.h")
+)
 
 target_include_directories(
     SCION_EDITOR PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
