Added ContentDisplay and EventDispatcher
* New display for displaying the content of a project.
* This is a work in progress. It will currently display the editor assets folder; however, eventually it will display the created project's asset folder.
* The EventDispatcher is just a simple wrapper around entt::dispatcher.

--- a/SCION_CORE/CMakeLists.txt
+++ b/SCION_CORE/CMakeLists.txt
@@ -92,6 +92,9 @@ add_library(SCION_CORE
 	"src/ECS/Components/ComponentSerializer.cpp"
 	"include/Core/Loaders/TilemapLoader.h"
 	"src/Loaders/TilemapLoader.cpp"
+
+	# Events
+	"include/Core/Events/EventDispatcher.h"
 )
 
 target_include_directories(
