Added Asset Display Utilities
* We can now add assets in the editor using the new Asset utils.
* Add textures, sounds, scenes, etc.
* This is still a work in progress.

--- a/SCION_EDITOR/CMakeLists.txt
+++ b/SCION_EDITOR/CMakeLists.txt
@@ -36,6 +36,8 @@ add_executable(SCION_EDITOR
 	"src/editor/displays/EditorStyleToolDisplay.cpp"
 	"src/editor/displays/ContentDisplay.h"
 	"src/editor/displays/ContentDisplay.cpp"
+	"src/editor/displays/AssetDisplayUtils.h"
+	"src/editor/displays/AssetDisplayUtils.cpp"
 
     # Editor Systems
     "src/editor/systems/GridSystem.h" 
