Update - Added Hub and Creation of Projects
* Added new hub class that will run first.
* The hub allows the user to create or load a new project.
* The expected content folders will be created for new projects.
* Main.lua file will be created automatically upon project creation.
* Moved the ImGui Initialization into it's own Gui class.
* Added new LuaSerializer.
* Removed the platformer game from being loaded automatically. Now the editor will use the loaded games path and the necessary scripts.
* Platformer game was placed in the _Games folder. I will want to eventually update this so it could be loaded like a template project.
* Embedded common shaders in SCION_CORE so they can be used eventually in the runtime project as well as the editor.
* Embedded font Awesome fonts to be loaded to ImGui from memory.
* Added .rc and icon for windows. Not sure how to do it for linux yet.
* Added ability to save/load game objects inside of the tilemap loader. Game objects are different from tiles in our engine.
* Created new SaveProject class. This will hold onto the current file paths etc.
* Fixed event dispatcher failing in gcc build.
* Adjusted all obsolete ImGui functions to use their replacements.
* Created new project loader class to handle creating new projects and loading previous projects.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin") # .exe
 
 if(WIN32)
     add_definitions(-DNOMINMAX)
+	set(APP_ICON_RESOURCE "${CMAKE_CURRENT_SOURCE_DIR}/resources/scion2d.rc")
 endif()
 
 find_package(glad CONFIG REQUIRED)
