Added Box/Ray Trace Box2d bindings
* Added the ability for an entity with a physics component to perform a box or ray trace.
* Added ability to create new lua class/table files from the content browser.
* Added the ability to create new folders in the content browser.

--- a/SCION_PHYSICS/CMakeLists.txt
+++ b/SCION_PHYSICS/CMakeLists.txt
@@ -7,7 +7,8 @@ add_library(SCION_PHYSICS
     "src/UserData.cpp"
 	"include/Physics/PhysicsUtilities.h"
 	"src/PhysicsUtilities.cpp"
-)
+	"include/Physics/BoxTraceCallback.h"
+ "src/BoxTraceCallback.cpp" "include/Physics/RayCastCallback.h" "src/RayCastCallback.cpp")
 
 target_include_directories(
     SCION_PHYSICS PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
