Added Event Dispatcher Lua Bindings -- WIP
* The event dispatcher bindings allows the user to bind to specific events from the engine or create new events in lua.
* Added function to get the current project path from lua.
* Added binding to get the current object data from the physics component.

--- a/SCION_CORE/CMakeLists.txt
+++ b/SCION_CORE/CMakeLists.txt
@@ -102,6 +102,9 @@ add_library(SCION_CORE
 
 	# Events
 	"include/Core/Events/EventDispatcher.h"
+	"src/Events/EventDispatcher.cpp"
+	"include/Core/Events/EngineEventTypes.h"
+	"src/Events/EngineEventTypes.cpp"
 )
 
 target_include_directories(
