Started Character Class and More Lua Bindings
* Started a new character class that will be basically an entity with specific components automatically added and a state machine. To add more later.
* Added Registry bindings so we can create registries in lua and not have to rely on the SCION registry. Both can be used at the same time.
* Added lua bindings to the following systems: RenderSystem, RenderUISystem, AnimationSystem. These systems can be created in lua and use a lua created registry.
* Added new UI Component and changed RenderUISystem to be able to draw sprites as well. These are sprites that we don't want to move with the player camera.
* Fixed some inconsistent naming conventions.

--- a/SCION_CORE/CMakeLists.txt
+++ b/SCION_CORE/CMakeLists.txt
@@ -105,7 +105,7 @@ add_library(SCION_CORE
 	"src/Events/EventDispatcher.cpp"
 	"include/Core/Events/EngineEventTypes.h"
 	"src/Events/EngineEventTypes.cpp"
-)
+ "include/Core/Character/Character.h" "src/Character/Character.cpp" "include/Core/ECS/Components/UIComponent.h" "src/ECS/Components/UIComponent.cpp")
 
 target_include_directories(
     SCION_CORE PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
