Massive Initial Commit
* Moved Scenes and Scene Manager to Core Lib.
* Created EditorSceneManager and objects with parent from core.
* Started the concept of a new PlayerStart
* Started the concept of a new Prefabbed entity. --> Needed for the player start!
* Added Iso functionality for grid system.
* Added Iso Functionality for Sprite and Rect Batches.
* Adjusted the sprite component to handle iso tilemaps.
* Started some math helper utilities
* Created a convert world to iso coordinate utility function.
* Added the ability to create either regular grid or iso grids upon scene creation.
* Adjusted serialization to handle Iso coords.
* Added the ability to use vertices when creating physics shapes. Currently only 4 vertices is supported.
* Added Masks and Filters to the physics component.
* And more clean-up etc.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ if(WIN32)
 endif()
 
 add_compile_definitions(IN_SCION_EDITOR)
+add_compile_definitions(SOL_ALL_SAFETIES_ON)
 
 find_package(glad CONFIG REQUIRED)
 find_package(soil2 CONFIG REQUIRED)
