--- a/SCION_UTILITIES/CMakeLists.txt
+++ b/SCION_UTILITIES/CMakeLists.txt
@@ -8,7 +8,7 @@ add_library(SCION_UTILITIES
     "include/ScionUtilities/ScionUtilities.h"
 	"src/ScionUtilities.cpp"
 	"include/ScionUtilities/HelperUtilities.h"
-)
+ "include/ScionUtilities/MathUtilities.h")
 
 target_include_directories(
     SCION_UTILITIES PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
